--- a/class.ipynb
+++ b/class.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#test comment\n",
     "datapath = \"./data/*\"\n",
     "datadep_path =  \"./data/datadep/*\"\n",
     "path_input = \"/Users/bustin/Desktop/capstone/MOSSBIOINFO/transcriptomics/march25/biojustin/data/datadep\"\n",
